:tada: added /api/post/[id] delete route
